fix photo on mobile

--- a/app/styles/components/_modules/_featured-spotlight.scss
+++ b/app/styles/components/_modules/_featured-spotlight.scss
@@ -50,6 +50,13 @@
     top: 0;
     margin: 0;
 
+    @include small-only {
+      -webkit-opacity: 0;
+      -moz-opacity: 0;
+      -o-opacity: 0;
+      opacity: 0;
+    }
+
     @include medium {
       max-width: none;
       left: 100% + $mediumGutterWidth*2;
